# agent-search

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  usage.md
agent/: runner.py  test_runner.py
ai_docs/: gemini_api.md
specs/: start.md
src/: dedup.rs  filter.rs  grep.rs  index.rs  lib.rs  main.rs  search.rs  stemmer.rs  truncate.rs  types.rs
test-corpus/: api.md  auth.md  config.md
tests/: cli_regressions.rs  grep.rs  modes.rs  review_bugs.rs
usage.tests/: benchmark-tasks.md  benchmark-v1-without-cli-context.md  benchmark-v2-with-cli-context.md  benchmark-v3-haiku-vs-sonnet.md  benchmark-v3-wnioski.md  benchmark-v4.md  context.md  test.html
