[package]
name = "agent-search"
version = "0.5.0"
edition = "2024"

[dependencies]
tantivy = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiktoken-rs = "0.6"
ignore = "0.4"
anyhow = "1"
regex = "1"
snowball_stemmers_rs = "1"
globset = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
